test/corpus/binary_operators.txt
========
Addition
========

1 + 1

---

(expression
  (binary_operator
    (integer)
    (PLUS)
    (integer)))

==============
Multiplication
==============

2 * 3.5

---

(expression
  (binary_operator
    (integer)
    (TIMES)
    (float)))


=======================
Quantity multiplication
=======================

2 MHz * dBm / J * variable

---

(expression
  (binary_operator
    (quantity
      (float)
      (units
        (unit_term
          (unit))
        (TIMES)
        (unit_term
          (unit))
        (DIVIDE)
        (unit_term
          (unit))))
    (TIMES)
    (variable
      (NAME))))

===========================
Addition and Multiplication
===========================

1 + 2.5 * 5 MHz

---

(expression
  (binary_operator
    (integer)
    (PLUS)
    (binary_operator
      (float)
      (TIMES)
      (quantity
        (float)
        (units
          (unit_term
            (unit)))))))
