test/corpus/quantity.txt
========
Quantity
========

12.5 MHz

---

    (expression
      (quantity
        (float)
        (unit
          (unit_term))))

===================
Multiplicative unit
===================

12 MHz*cm*J

---

    (expression
      (quantity
        (float)
        (unit
          (unit_term)
          (unit_term)
          (unit_term))))

================================
Multiplicative and divisive unit
================================

-12 MHz*cm/J

---

    (expression
      (quantity
        (float)
        (unit
          (unit_term)
          (unit_term)
          (unit_term))))

===============
Unit with power
===============

1.5 MHz^-2

---

    (expression
      (quantity
        (float)
        (unit
          (unit_term
            (integer)))))

======
Degree
======

120 °

---

    (expression
      (quantity
        (float)
        (unit
          (unit_term))))

=======
Percent
=======

10e-1 %

---

    (expression
      (quantity
        (float)
        (unit
          (unit_term))))
